# AID_ITMO_UzlezzEngine

./: .gitignore  CMakeLists.txt  README.md  README_OLEG.md
assets/models/: Bookcase with a drawer.mtl  Cowboy Hat.mtl
assets/scenes/: demo_scene.json
assets/shaders/: mesh_fragment.glsl  mesh_fragment_debug.glsl  mesh_fragment_simple.glsl  mesh_fragment_simple_texture.glsl  mesh_fragment_uv_debug.glsl  mesh_fragment_uv_test.glsl  mesh_vertex.glsl  vertex.glsl
assets/textures/: demo_checker.ppm  demo_panel.ppm
src/core/: Application.cpp  Application.h  ServiceLocator.h
src/ecs/: CameraSystem.cpp  CameraSystem.h  CollisionUtils.h  Components.h  DebugRenderSystem.cpp  DebugRenderSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SpinSystem.cpp  World.cpp  World.h
src/editor/: EditorCamera.cpp  EditorCamera.h
src/events/: CollisionEvent.h  EventDispatcher.h
src/input/: GlfwInputHandler.cpp  GlfwInputHandler.h  IInputHandler.h  InputManager.cpp  InputManager.h  KeyCode.h
src/math/: MathTypes.h
src/render/: IRenderAdapter.h  OpenGLRenderAdapter.cpp  OpenGLRenderAdapter.h  ShaderProgram.cpp  ShaderProgram.h
src/resources/: HotReload.cpp  HotReload.h  MeshLoader.cpp  MeshLoader.h  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  SceneManifest.cpp  SceneManifest.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h  stb_image_impl.cpp
src/states/: EditorState.cpp  EditorState.h  GameplayState.cpp  GameplayState.h  LoadingState.cpp  LoadingState.h  MenuState.cpp  MenuState.h
